--- a/src/components/nav/style.css
+++ b/src/components/nav/style.css
@@ -4,6 +4,7 @@ div.ant-drawer-body {
 
 ul.ant-menu-overflow.ant-menu.ant-menu-root.ant-menu-horizontal.ant-menu-light {
   border-bottom: 0px;
+  background: transparent;
 }
 div.ant-drawer-header {
   padding: 12px 24px;
